--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ boto3==1.7.3
 django-cors-headers==2.4.0
 django-compressor==2.2
 django-environ==0.4.4
+django-imagekit==4.0
 django-libsass==0.7
 django-redis==4.7.0
 django-storages[boto3]==1.6.6
@@ -14,7 +15,7 @@ gunicorn==19.8.1
 ipython
 libsass==0.14.5
 newrelic==3.2.0.91
+pillow==6.1.0
 psycogreen==1.0
 psycopg2==2.7.3.1
 raven==6.7.0
-wagtail==2.6.1
