--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-compressor==2.2
 django-environ==0.4.4
 django-imagekit==4.0
 django-libsass==0.7
+django_orderable==6.0.1
 django-redis==4.7.0
 django-storages[boto3]==1.6.6
 gevent==1.2.2
