--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,11 @@ django-cors-headers==2.4.0
 django-compressor==2.2
 django-environ==0.4.4
 django-friendship==1.8.1 
-django-graphql-jwt==0.2.2
 django-imagekit==4.0
 django-libsass==0.7
 django_orderable==6.0.1
 django-redis==4.7.0
+djangorestframework==3.9.2
 django-storages[boto3]==1.6.6
 gevent==1.2.2
 greenlet==0.4.13
