--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Django==2.2.5
 boto==2.48.0
 boto3==1.7.3
+dj-database-url==0.4.2
 django-cors-headers==2.4.0
 django-compressor==2.2
 django-environ==0.4.4
@@ -19,6 +20,10 @@ ipython
 libsass==0.14.5
 newrelic==3.2.0.91
 pillow==6.2.0
+postgres==2.2.1
+requests==2.21.0
+whitenoise==3.3.0
 psycogreen==1.0
 psycopg2==2.7.3.1
+pytz==2017.2
 raven==6.7.0
