fixed social migrations, update default db to use docker postgres image locally, update production settings to override the db with production postgres db

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,11 @@
 version: "3"
 
 services:
+  db:
+    image: postgres:9.6
+    restart: always
+    volumes:
+      - postgresdata:/data/postgre
   web:
     build:
       context: .
@@ -18,11 +23,7 @@ services:
       - .env
     depends_on:
       - db
-  db:
-    image: postgres:9.6
-    restart: always
-    volumes:
-      - postgresdata:/data/postgres
+
   redis:
     image: redis:latest
 
