--- a/heroku.yml
+++ b/heroku.yml
@@ -2,4 +2,8 @@ build:
   docker:
     web: Dockerfile
 run:
-  web: bundle exec puma -C config/puma.rb
+  web: gunicorn momentiio.wsgi:application --bind 0.0.0.0:$PORT
+release:
+  image: web
+  command:
+    - python manage.py collectstatic --noinput
