--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-friendship==1.8.1
 django-imagekit==4.0
 django-libsass==0.7
 django_orderable==6.0.1
+django_phonenumber_field==3.0.1
 django-redis==4.7.0
 djangorestframework==3.9.2
 django-storages[boto3]==1.6.6
@@ -19,6 +20,7 @@ gunicorn==19.8.1
 ipython
 libsass==0.14.5
 newrelic==3.2.0.91
+phonenumbers==8.11.1
 pillow==6.2.0
 postgres==2.2.1
 requests==2.21.0
