--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ boto==2.48.0
 boto3==1.7.3
 dj-database-url==0.4.2
 django-cors-headers==2.4.0
+django-countries==5.3.1
 django-compressor==2.2
 django-environ==0.4.4
 django-friendship==1.8.1 
