fixed docker-compose.yml to accept no password for postgres locally

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,6 @@
 version: "3"
 
 services:
-  db:
-    image: postgres:9.6
-    restart: always
-    volumes:
-      - postgresdata:/data/postgre
   web:
     build:
       context: .
@@ -23,7 +18,13 @@ services:
       - .env
     depends_on:
       - db
-
+  db:
+    image: postgres:9.6
+    restart: always
+    volumes:
+      - postgresdata:/data/postgres
+    environment:
+      - POSTGRES_HOST_AUTH_METHOD=trust
   redis:
     image: redis:latest
 
